// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate overriden wrapper 1`] = `
"const original = require('../foo').handler;

const wrapper = (original) => (evt, ctx, cb) => {
    cb('exit early');
  }

module.exports = { handler: wrapper(original) };"
`;

exports[`generates expected output 1`] = `
"const original = require('../foo').handler;

const wrapper = (original) => (evt, ctx, cb) => {
  if (evt.ignitor) {
    return cb(null, 'pinged');
  }
  return original(evt, ctx, cb);
};

module.exports = { handler: wrapper(original) };"
`;
